client/src/widgets/ClientInfo/ui/ClientInfo.module.scss
.root {
	&__blackout {
		display: none;
		position: fixed;
		z-index: 1;
		top: 0;
		right: 0;
		bottom: 0;
		left: 0;

		&_active {
			display: block;
		}
	}

	&__container {
		padding: 0px 20px;

		&_title {
			padding-bottom: 20px;
			display: flex;
			flex-wrap: wrap;
			flex-direction: row;
			align-items: end;
			gap: 10px;

			&_editBtn {
				z-index: 3;
			}

			&_text {
				color: #384043;
				font-weight: 700;
				font-size: 20px;
			}

			&_submit {
				z-index: 2;
			}
		}

		&_infoBlock::-webkit-scrollbar-thumb {
			display: none;
		}

		&_infoBlock {
			overflow-x: scroll;
			display: grid;
			grid-template-columns: 1fr 1fr 1fr;
			gap: 0 30px;
			padding: 18px;
			background-color: #d4d4d4;
			border-radius: 20px;
			z-index: 2;

			&_info {
				min-width: 300px;
				z-index: 2;
			}

			@media (max-width: 650px) {
				&_info {
					min-width: 100px;
				}
			}
		}

		@media (max-width: 1000px) {
			&_infoBlock {
				grid-template-columns: 1fr;
				padding: 9px;
			}
		}
	}

	@media (max-width: 650px) {
		&__container {
			padding: 0;
		}
	}
}

